_sass/parts/toc.scss
@import '../mixins';

.wiki-container {
  display: flex;

  @include mobile {
    flex-direction: column;
  }
}

.toc-pane {
  overflow: auto;
  width: 33rem;
  flex-shrink: 0.3;
  padding-top: 2rem;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  max-height: 100vh;
  margin-right: 1rem;

  @include mobile {
    position: inherit;
    padding-bottom: 2rem;
    border-bottom: 1px solid var(--button-hover-outline);
  }
}

.toc {
  white-space: nowrap;

  .gh-link, .cf-link {
    font-weight: bold;
    padding-top: 0;
    padding-bottom: 0;
    margin: 0.4rem 0;
    border-left: 5px solid var(--button-hover-outline);
    height: 1.6em;
    svg {
      height: 1em;
      margin-right: 0.5em;
      color: var(--base-text-color);
      vertical-align: middle;
    }
    a {
      text-decoration: none;
    }
    &:hover, &:focus {
      border-color: var(--button-outline);
    }
    .external-link-icon {
      color: inherit;
      float: right;
    }
  }

  .gh-link {
    img {
      height: 1.2em;
    }
  }

  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  li {
    display: block;
    position: relative;
    padding: 0.4rem 1rem;

    a {
      text-overflow: ellipsis;
      width: 100%;
      display: inline-block;
      overflow: hidden;
      vertical-align: middle;
    }
  }
}

